<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_LoadCell_ParOut" Id="{31744643-27eb-49f1-89ae-d38d20a7e35e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ST_LoadCell_ParOut :
STRUCT

	rGROSSWeight:REAL;//当前重量
	sErrorID	 :STRING;//报错内容
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>