<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="stDeviceStatus" Id="{38358f11-7578-4bec-879c-7ef7a10d1945}">
    <Declaration><![CDATA[TYPE stDeviceStatus :
STRUCT
 xQStart:BOOL;
 xQRdyCmd:BOOL;
 xQBusy:BOOL;
 xQDone:BOOL;
 xQError:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>